src/app/components/tasks-list/tasks-list.component.scss
:host{

}

.taskList {

  @media(max-width: 900px) {
    width: 94vw;
    display: flex;
    overflow-x: auto;
    scroll-snap-type: x mandatory;

    &::-webkit-scrollbar { width: 0; }
  }

  .task-list-col {
    white-space: nowrap;

    .taskList-group {

      @media(max-width: 900px) {
        width: 94vw;
        flex-shrink: 0;

        > div {
          scroll-snap-align: start;
        }
      }

      .task-list-header{
        display: flex;
        justify-content: space-between;
        padding: 10px;

        span{
          max-width: 189px;
          overflow: hidden;
          text-overflow: ellipsis;
          white-space: nowrap;
        }
      }
      width: 250px;
      background-color: white;
      margin-right: 10px;
      border-radius: 3px;
      color: darkslateblue;
      display: inline-block;
      vertical-align: top;
      white-space: normal;

      .taskList-group-item{

      }

      .update-button {

        &:hover {
          cursor: pointer;
        }

        &:after {
          content: '•••';
          transform: translate(-50%, -50%) rotate(90deg);
          font-size: 10px;
          letter-spacing: 4px;
          color: darkslateblue;
        }
      }
    }
  }

  .container-details {
    position: fixed;
    z-index: 1;
    left: 0;
    top: 0;
    width: 100%;
    height: 100%;
    overflow: auto;
    background-color: rgb(0,0,0);
    background-color: rgba(0,0,0,0.4);

    .details {
      background-color: #fefefe;
      margin: 15% auto;
      padding: 20px;
      border: 1px solid #888;
      width: 350px;
      line-height: 16px;
      border-radius: 3px;

      .option-container{
        display: flex;
        justify-content: space-between;
        border-bottom: 1px solid #e2e2e2;
        margin-bottom: 20px;
        padding-bottom: 10px;

        .title-update-task-list{
          color: darkslateblue;
          font-size: 16px;
        }
      }

      .close {
        color: #aaa;
        float: right;
        font-size: 28px;
        font-weight: bold;
        &:hover,
        &:focus
        {
          color: rgba(9, 30, 66, 0.24);
          text-decoration: none;
          cursor: pointer;
        }
      }
    }
  }
}

